Import Mockito as static in tests